[package]
name = "datez"
version = "0.0.0"
edition = "2021"
authors = ["Tony Finch <dot@dotat.at>"]
license = "CC0-1.0"
description = "Convert a time in several timezones."
readme = "README.md"
keywords = ["time", "timezone", "conversion"]

[dependencies]
anyhow = "~1"
chrono = "~0"
chrono-tz = "~0"

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_System_Time",
]
