[package]
name = "datez"
version = "0.2.0"
description = "Convert a time into several timezones."
keywords = ["time", "timezone", "conversion"]
authors = [
	"Tony Finch <dot@dotat.at>",
	"Ollivier Robert <roberto@keltia.net>"
	]
license = "CC0-1.0"
edition = "2021"

[dependencies]
anyhow = "~1"
chrono = "~0"
chrono-tz = "~0"

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_System_Time",
]

[dev-dependencies]
rstest = "0.11.0"
